1.2-kustomize/lab6/2-moduralizing-an-apps-configuration/config/after/components/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo
spec:
  ingressClassName: nginx
  rules:
  - host: todo.example.local
    http:
      paths:
      - backend:
          service:
            name: todo
            port:
              number: 3000
        path: /
        pathType: ImplementationSpecific
